fixed svg filenames, styled on-page nav, removed global ant overflow-x

--- a/src/pages/styles/features.scss
+++ b/src/pages/styles/features.scss
@@ -2,6 +2,11 @@
 
 // NEW (2021)
 
+.ant-layout.ant-layout-has-sider > .ant-layout,
+.ant-layout.ant-layout-has-sider > .ant-layout-content {
+    overflow-x: initial !important; // need this for position: sticky nav
+}
+
 // Hero animation
 // Animated SVG was created with SVGator. We use different sizes depending on screen size. (720x1300 on mobile, 1920x1080 on normal desktops, 1920x720 on very wide screens. (We don't want the content pushed too far down.) Note: These are viewBox dimensions for the SVG.
 // To add/remove an SVG at a breakpoint:
@@ -42,6 +47,12 @@
         -moz-animation: ca3_fade_move_down 2s ease-in-out infinite;
         animation: ca3_fade_move_down 2s ease-in-out infinite;
     }
+}
+
+.nav-current {
+    background: linear-gradient(89.94deg, #51a0cd 2.12%, #3c8ebc 89.27%);
+    border: 0.5px solid #62c6ff;
+    box-shadow: 0px 0px 15px rgba(86, 123, 219, 0.49);
 }
 
 /*animated scroll arrow animation*/
